@@ -136,8 +136,6 @@ txt2.	3600	IN	TXT	"a" "bb" "ccc"
 txt3.	3600	IN	TXT	"a b" "bb" " cc c " " "
 0474787434000010000100000E10001003612062026262062063632063200120
 txt4.	3600	IN	TXT	"a b" "bb" " cc c " " "
-0474787435000010000100000E10001918546573742D537472696E6722546573742D537472696E6722
-txt5.	3600	IN	TXT	"Test-String\"Test-String\""
 056162626579076578616D706C6503636F6D00001D000100000E1000100067251288B2F08C69741F56009A6E60
 abbey.example.com.	3600	IN	LOC	40 32 24.716 N 105 04 25.770 W 1208m 600000m 2000m 1m
 05616272616D076578616D706C6503636F6D00001D000100000E1000100015572588B2F08C69741F56FFFFFFFB
@@ -172,3 +170,7 @@ nominnosec.example.com.	3600	IN	LOC	40 00 00.000 N 105 00 00.000 W 1208m 1m 1000
 nosec.example.com.	3600	IN	LOC	40 32 00.000 N 105 04 00.000 W 1208m 1m 10000m 1m
 086E6F737A68707670076578616D706C6503636F6D00001D000100000E1000100012161288B2F08C69741F56009A6E60
 noszhpvp.example.com.	3600	IN	LOC	40 32 24.716 N 105 04 25.770 W 1208m 1m 10000m 1m
+0474787435000010000100000E10001918546573742D537472696E6722546573742D537472696E6722
+txt5.	3600	IN	TXT	"Test-String\"Test-String\""
+0474787436000010000100000E100108FF763D444B494D313B206B3D7273613B20673D2A3B20733D656D61696C3B20683D736861313B20743D733B20703D4D4947664D413047435371475349623344514542415155414134474E4144434269514B42675143333365774B78425A4152534150625439364970572F6B334467644E7546456238393665496638304863567857772B7732472B31735163556A785755534770367954544D456C73366E3774746869786964795269452F61574F793369632F4B2B39323750754379304D315A583251593867566D4F484A6259543371425138746F5172764749657238665171714A497A4F2F4154566248785838422F7A3050736D4749327878714379586B4F77074944415141423B
+txt6.	3600	IN	TXT	"v=DKIM1; k=rsa; g=*; s=email; h=sha1; t=s; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC33ewKxBZARSAPbT96IpW/k3DgdNuFEb896eIf80HcVxWw+w2G+1sQcUjxWUSGp6yTTMEls6n7tthixidyRiE/aWOy3ic/K+927PuCy0M1ZX2QY8gVmOHJbYT3qBQ8toQrvGIer8fQqqJIzO/ATVbHxX8B/z0PsmGI2xxqCyXkOw" "IDAQAB;"
